[package]
name = "tout"
version = "0.4.0"
edition = "2024"
authors = ["Michael Ni <michael.ni678@gmail.com>"]
repository = "https://github.com/michaelni678/tout"
homepage = "https://github.com/michaelni678/tout"
readme = "README.md"
license = "Apache-2.0"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macros"]
description = "Token utilities for proc-macro2"
documentation = "https://docs.rs/tout"

[dev-dependencies]
quote = "1"

[dependencies]
proc-macro2 = "1"
